# HomeControl

api/: HomeControlApi.py
api/apienv/: pip-selfcheck.json
api/apienv/Scripts/: activate  activate.bat
arduino/PlayHouseControl/: PlayHouseControl.ino
client/: client.sln
client/app/: app.module.js.map  app.module.ts  app.routing.js  app.routing.js.map  app.routing.ts  dashboard.component.js.map  dashboard.component.ts  hero-detail.component.js.map  hero-detail.component.ts  hero.service.js  hero.service.js.map  hero.service.ts  heroes.component.html  heroes.component.js.map  heroes.component.ts  mock-heroes.js  mock-heroes.js.map  mock-heroes.ts
service/: homeControl.pb.cc  homeControl.pb.h  homeControl.proto  homeControl_pb2.py  ipctest.py  ipctestc.cpp  ipctestclient.py  prototest.py  remote2mbps  remote2mbps.cpp
spikes/protobuf/: homeControl.proto
spikes/protobuf/cpp/: CMakeLists.txt  homeControl.pb.cc  homeControl.pb.h  main.cpp
spikes/protobuf/py/: client.py  homeControl_pb2.py
spikes/zmqTest/: homeControl.pb.cc  homeControl.pb.h
spikes/zmqTest/client/: client.py  homeControl_pb2.py
spikes/zmqTest/server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
